<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31313d"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_edit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffa500"
        android:textSize="18sp"
        android:layout_margin="3dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#525266" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/labelMovieName"
                android:textColor="#1fcaff"/>

            <EditText
                android:id="@+id/editMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintMovie"
                android:textSize="14sp"
                android:layout_margin="5dp" />

            <TableLayout
                android:id="@+id/tbMovieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#131111" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/label_title"
                        android:textColor="#4eecba"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/title_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:textColor="#ffa500"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#453d3d" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/label_genre"
                        android:textColor="#4eecba"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/genere_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:textColor="#ffa500"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/label_year"
                        android:textColor="#4eecba"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/year_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:textColor="#ffa500"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#453d3d" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/label_released"
                        android:textColor="#4eecba"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/released_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:textColor="#ffa500"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/label_runtime"
                        android:textColor="#4eecba"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/runtime_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:textColor="#ffa500"
                        android:textSize="13sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#453d3d" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/label_imdbRating"
                        android:textColor="#4eecba"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/imdbRating_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:textColor="#ffa500"
                        android:textSize="13sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/labelMovieDesc"
                android:textColor="#1fcaff"/>

            <EditText
                android:id="@+id/editDescrption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/hintDescrption"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                android:layout_margin="5dp" />

            <RatingBar
                android:id="@+id/ratingBarMvRate"
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stepSize="0.01" />

            <ImageView
                android:id="@+id/imageMovie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/imgMovieALT" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/delete_64" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tick_64"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

</LinearLayout>